--- a/.dockerignore
+++ b/.dockerignore
@@ -1,23 +1,36 @@
-# Folder
-.vscode
-__pycache__
+# vscode
+.vscode/
+
+# cache
+__pycache__/
+**.pyc
 
 # Build
-build
-dist
+build/
+dist/
 
-# Pipfiles
-Pipfile
-Pipfile.lock
+# Script
+script/
+**.sh
+
+# env
+.env
+
+# git
+.git
+.gitignore
 
 # Docker
 Dockerfile
+
+# Jenkins
+Jenkinsfile
 
 # Misc
 .DS_Store
 README.md
 LICENSE.md
-**.pyc
-.git
-.gitignore
-.env
+
+# Pipfiles
+Pipfile
+Pipfile.lock
